Added Receipts by Wave section
Need to improve screenshot quality
Need to complete description secion
Need to add Payroll by Wave

--- a/_css/style.css
+++ b/_css/style.css
@@ -116,6 +116,10 @@ ol {
   margin: 0;
   padding: 0;
 }
+  ul.styled {
+    list-style: disc;
+    padding-left: 15px;
+  }
 
 #masthead {
 	margin: 10px auto 25px;
