--- a/_css/style.css
+++ b/_css/style.css
@@ -110,6 +110,10 @@ p {
 	font-size: 108%;
 	margin: 0 0 5px;
 }
+  p.intro {
+    display: none;
+    text-align: center;
+  }
 ul,
 ol {
   list-style: none;
@@ -120,6 +124,10 @@ ol {
     list-style: disc;
     padding-left: 15px;
   }
+  ol.styled {
+    list-style: decimal;
+    margin-left: 1.4em;
+  }
 a.secondary {
   color: #ccc;
   display: block;
@@ -129,6 +137,29 @@ a.secondary {
   a.secondary:hover {
     color: #990000;
   }
+input,
+textarea {
+  -webkit-appearance: none;
+  background: rgba(255,255,255,0.7);
+  border: 1px solid rgba(0,0,0,0.1);
+  border-radius: 4px;
+  box-sizing: border-box;
+  height: 50px;
+  margin: 5px 2%;
+  padding: 1%;
+  width: 96%;
+}
+textarea {
+  height: 100px;
+}
+input.button {
+  -webkit-appearance: none;
+  border-radius: 4px;
+  background: rgb(57, 68, 74);
+  color: #fff;
+  font-size: 140%;
+  font-weight: 600;
+}
 
 #masthead {
 	margin: 10px auto 25px;
@@ -141,6 +172,7 @@ a.secondary {
 	line-height: 100%;
 	margin: 0 auto 15px;
 	max-width: 960px;
+  text-align: center;
 }
 #masthead h1 a {
 	color: #990000;
@@ -162,7 +194,6 @@ a.secondary {
 	nav {
 		font-family: proxima-nova-1,proxima-nova-2,Helvetica,Arial,sans-serif;
 		font-size: 108%;
-		border-top: 1px solid rgba(0,0,0,0.1);
 		border-bottom: 1px solid rgba(0,0,0,0.1);
 		margin: 0 0 25px;
 	}
@@ -221,8 +252,16 @@ a.secondary {
         position: relative;
         width: 100%;
 			}
-        .past {
+        #main article.past {
           visibility: hidden;
+        }
+        #main article.contact {
+          background: none;
+          height: auto;
+          padding-bottom: 15px;
+        }
+        #main article h2 {
+          margin: 0;
         }
         #main article ~ a {
           margin-bottom: 30px;
@@ -298,7 +337,7 @@ a.secondary {
             width: 100%;
           }
             #main .flex-control-nav {
-              margin: 5px auto 0;
+              margin: 8px auto 0;
               width: 150px;
             }
               #main .flex-control-nav li {
@@ -381,6 +420,11 @@ a.secondary {
             line-height: 40px;
             padding: 2% 4%;
           }
+            #main form .title {
+              border: none;
+              padding: 2% 2% 0;
+              margin: 0;
+            }
           #main .info {
             padding: 4%;
           }
@@ -391,7 +435,7 @@ a.secondary {
               display: block;
             }
   				#main .tags {
-  					background: url("http://static.tumblr.com/0vhitxf/x71lfrx6x/ico-tags.png") no-repeat scroll 4% 50% transparent;
+  					background: url("http://static.tumblr.com/0vhitxf/x71lfrx6x/ico-tags.png") no-repeat scroll 4% 16px transparent;
             border-top: 1px solid rgba(0, 0, 0, 0.2);
   					bottom: 0;
             -moz-box-sizing: border-box;
@@ -487,15 +531,36 @@ footer {
 	/* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
 }
 @media screen and (max-width: 320px) {
+  input,
+  textarea {
+    padding: 1% 3%;
+  }
 	#masthead h1 {
 		font-size: 150% !important;
 		text-align: center;
 	}
-	#masthead nav {
-		font-size: 40%;
-	}
+  #main article .images {
+    min-height: 300px;
+  }
+  #past_work,
+  .past {
+    display: none;
+  }
 }
 @media screen and (max-width: 800px) {
+  p.intro {
+    display: block;
+    margin: 0 0 35px;
+  }
+  input,
+  textarea {
+    padding: 2% 3%;
+  }
+  #masthead h1 {
+    font-size: 166% !important;
+    margin-bottom: 5px;
+    text-align: center;
+  }
 	#container {
 		margin: 0 auto 20px;
 		padding: 0;
@@ -506,6 +571,32 @@ footer {
 			margin: 0 0 50px;
 			width: 100%;
 		}
+    #main article {
+      height: auto;
+      max-height: none;
+    }
+      #main article .images,
+      #main article .description {
+        float: none;
+        width: 100%;
+      }
+      #main article .images {
+        border-radius: 4px 4px 0 0;
+        min-height: 390px;
+      }
+      #main article .description {
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-top: none;
+        border-radius: 0;
+      }
+      #main .tags {
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 0 0 4px 4px;
+        border-top: none;
+        box-sizing: border-box;
+        height: auto;
+        position: relative;
+      }
 		#sidebar {
 			float: none;
 			width: 100%;
