Updated Stylefind case study page copy and wireframe images

--- a/_css/style.css
+++ b/_css/style.css
@@ -640,6 +640,14 @@ footer .pagination a.current_page:hover {
   max-height: 791px;
   overflow-x: scroll;
 }
+.case-study section.images.wires {
+  max-height: 650px;
+  overflow-x: scroll;
+}
+.case-study section.images.wires img {
+  height: 650px;
+  width: auto;
+}
 .case-study section.images li {
   float:left;
   margin: 0 30px;
